[package]
name = "varjokuuntelija"
version = "0.1.0"
authors = ["Miranda Kastemaa <miranda@foldplop.com>"]

[lib]
name = "varjokuuntelu"
path = "src/lib.rs"

[[bin]]
name = "varjokuuntelija"
path = "src/main.rs"

[dependencies]
getopts = "0.2"
gl = "0.6"
glutin = "0.7"
notify = "2.5"
portmidi = "0.1"
rustc-serialize = "0.3"
time = "0.1"
