[package]
name = "varjokuuntelija"
version = "0.1.0"
authors = ["miranda kastemaa <miranda@foldplop.com>"]

[lib]
name = "varjokuuntelu"
path = "src/lib.rs"

[[bin]]
name = "varjokuuntelija"
path = "src/main.rs"

[dependencies]
getopts = "0.2"
glium = "0.25"
glutin = "0.21"
notify = "4.0"
portmidi = "0.2"
rustc-serialize = "0.3"
time = "0.1"
